--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -21,7 +21,7 @@
 		\item Подать на вход осциллографа сигнал с выхода генератора ГЗ-112 с частотой $f \sim 1~\text{кГц}$ и амплитудой $\sim 100~\text{мВ}$;
 		\item Вычислить величину
 		\begin{equation} \label{eq:task:1}
-			K = \frac{\mu}{1 + \frac{R_i}{R_a}},
+			S_d = \frac{S_i}{1 + \frac{R_i}{R_a}},
 		\end{equation}
 		определив по осциллограмме амплитуду выходного сигнала;
 		\item Проверить частотные свойства усилителя. Снять зависимость коэффициента усиления от частоты. Определить частоту, на которой коэффициент усиления уменьшается в 2 раза;
