--- a/source/practice/3_anode_characteristics.tex
+++ b/source/practice/3_anode_characteristics.tex
@@ -1,5 +1,5 @@
 \subsubsection{Снятие анодной характеристики}
-Были сняты 4 анодные характеристики для разных напряжений на сетке $U_c$: -4, -2, 0, 2 вольт. Также вычислены их погрешности по формулам  \cref{eq:error:1.2,eq:error:2.1} (см. \cref{app:8,app:9})
+Были сняты 4 анодные характеристики для разных напряжений на сетке $U_c$: -4, -2, 0, 2 вольт. Также вычислены их погрешности по формулам  \cref{eq:error:1.2,eq:error:2.1} (см. \cref{app:8,app:9}) и записаны в \cref{tab:4b}.
 \begin{table}[h]
 	\centering
 	\caption{Снятие анодной характеристики триода}
