--- a/source/theory.tex
+++ b/source/theory.tex
@@ -24,6 +24,39 @@
 \begin{equation} \label{eq:2}
 	S \approx \frac{\Delta I_a}{\Delta U_a}
 \end{equation}
+
+\subsection{Триод}
+
+В триоде помимо катода и анода имеется еще один электрод -- управляющая сетка, расположенная вблизи катода между катодом и анодом. Конструктивно сетка выполняется в виде металлической проволочной спирали. Изменение потенциала сетки по отношению к катоду изменяет величину электрического поля между ними. При потенциале сетки \( U_c > 0 \) (относительно катода) электрическое поле ускоряет электроны \( u \), следовательно, увеличивает \( I_e \); при \( U_c < 0 \) поле между сеткой и катодом оказывает тормозящее действие на электроны \( u \) уменьшает \( I_e \). Таким образом наличие сетки в лампе позволяет управлять величиной анодного тока. Обычно используют тормозящее действие сетки, т.~е. работают при \( U_c < 0 \), так как при этом сеточный ток отсутствует, и в цепи сетки для управления анодным током не затрачивается никакой мощности.
+
+В триоде анодный ток зависит как от напряжения на сетке, так и от напряжения на аноде \( I_e = f(U_c, U_d) \). Эта зависимость (при постоянной температуре катода \( T_h = \mathrm{const} \)) изображается обычно в виде двух семейств статических характеристик (статическими они называются потому, что снимаются на постоянном токе)
+\[ I_a = f_1 (U_c)_{U_a = \text{const}} \]
+--- статические анодно-сеточные характеристики, которые представлены на рис.3. 
+\[ I_a = f_2 (U_a)_{U_c = \text{const}}\]
+--- статические анодные характеристики, изображенные на рис.4.
+
+При увеличении \( U_a \) анодно-сеточные характеристики смещаются влево. То же происходит с анодными характеристиками при увеличении \( U_c \).
+
+Анодный ток \( I_a \) меняется нелинейно как с изменением \( U_c \), так и с изменением \( U_a \). Параметры 
+\[\begin{aligned}
+	S = \frac{\partial I_a}{\partial U_c} = \left[ \frac{d I_a}{d U_c} \right]_{U_a = \text{const}} && \text{и} && R_i = \frac{\partial U_a}{\partial I_a} = \left[ \frac{\partial U_a}{\partial I_a} \right]_{U_c = \text{const}}
+\end{aligned}\]
+по аналогии с диодом называются соответственно крутизной и внутренним сопротивлением триода.
+
+Крутизна характеристики графически может быть определена как тангенс угла наклона касательной к сеточной характеристике в данной точке. Из-за нелинейности сеточной характеристики значение крутизны в каждой точке характеристики различно.
+
+У существующих триодов \( S \) порядка нескольких десятков мА/В. 
+
+Внутреннее сопротивление графически может быть определено как котангенс угла наклона касательной к анодной характеристике в рабочей точке. У триода \( R_i \) принимает значения от нескольких единиц до нескольких десятков кОм. Практически значения \( S \) и \( R_i \) могут быть приближенно определены, как и для диода, через соответствующие приращения.
+
+Параметры \( S \) и \( R_i \) изменяются в зависимости от действующих напряжений на электродах триода. Найдем связь между этими параметрами, вычисляя полный дифференциал функции \( I_a = f (U_c, U_a) \):
+
+\[ dI_a = \frac{\partial I_a}{\partial U_c} dU_c + \frac{\partial I_a}{\partial U_a} dU_a \]
+
+Если \( U_c \) и \( U_a \) изменять так, чтобы анодный ток \( I_a \) оставался постоянным, т.~е. \( dI_a = 0 \), то, учитывая, что изменения сеточного и анодного напряжения при этом различного знака, получим
+\[0 = \frac{\partial I_a}{\partial U_c} - \frac{\partial I_a}{\partial U_a} \left[\frac{d U_a}{U_c}\right]_{I_a = \text{const}} \quad \to \quad S= \frac{1}{R_i} \mu \quad \mu = \left( \frac{\partial U_a}{\partial U_c} \right)_{I_a = \text{const}}, \]
+где $\mu$ --- статический коэффициент усиления.
+
 \newpage
 
 \subsection{Вывод закона 3/2 Ленгмюра}
@@ -34,12 +67,12 @@
 Используем одно из уравнений Максвелла в дифференциальной форме:
 \[ \text{div} E = \frac{\rho}{\mathcal{E}_0} \]
 
-где $\rho$ -- объёмная плотность заряда. Спроецируем это уравнение на ось $x$:
+где $\rho$ --- объёмная плотность заряда. Спроецируем это уравнение на ось $x$:
 \begin{align} \label{Langmuir-ur1}
 	\frac{\partial E}{\partial x} = - \frac1{\mathcal{E}_0} e n
 \end{align}
 
-Знак минус учитывает, что эмиттируемые электроны имеют отрицательный заряд, $\mathcal{E}_0$ - электрическая постоянная, $n$ - концентрация электронов, $E$ - напряжённость электрического поля. 
+Знак минус учитывает, что эмиттируемые электроны имеют отрицательный заряд, $\mathcal{E}_0$ --- электрическая постоянная, $n$ --- концентрация электронов, $E$ --- напряжённость электрического поля. 
 
 Работа по перемещению единичного точечного положительного заряда из одной точки поля в другую вдоль оси $x$ при условии, что точки расположены бесконечно близко друг к другу $x_2 - x_1 = dx$, равна $E_x dx$. Та же работа равна $\phi_1 - \phi_2 = -dU$. Приравняв оба выражения, можем записать:
 \begin{align} \label{Langmuir-ur2}
@@ -49,12 +82,10 @@
 Выразим напряжённость $E$ через потенциал $U$, с помощью формулы \eqref{Langmuir-ur2}. 
 Заряд можно представить как количество элементарных зарядов(электронов) или заряд электрона на концентрацию в объёме:
 \[ q = eN = enV \]
-
 С другой стороны объёмная плотность заряда равна:
 \[ \rho = \frac{dq}{dV} = \frac{d}{dV} enV = en  \]
 Тогда получаем, что объёмная плотность тока равна:
 \[ j = \rho u = enu \]
-
 Концентрацию выразим через объёмную плотность тока, а скорость электронов - из закона сохранения энергии: $mu^2 / 2 = eU$: 
 \begin{equation} \label{Langmuir-ur3}
 	n = \frac{j}{eu} 
@@ -62,8 +93,7 @@
 \begin{equation} \label{Langmuir-ur4}
 	u = \sqrt{ \frac{2eU}m } 
 \end{equation}
-
-Тогда уравнение \eqref{Langmuir-ur1} с учётом \eqref{Langmuir-ur2}, \eqref{Langmuir-ur3} и \eqref{Langmuir-ur4} принимает вид:
+Тогда уравнение \cref{Langmuir-ur1} с учётом \cref{Langmuir-ur2,Langmuir-ur3,Langmuir-ur4} принимает вид:
 \[\frac{d}{dx} \frac{dU}{dx} = - \frac1{\mathcal{E}_0} e \frac{j}{e} \sqrt{\frac{m}{2eU}}\]
 \begin{equation} \label{Langmuir-ur5}
 	\frac{d^2U}{dx^2} = \frac{j}{\mathcal{E}_0} \sqrt{\frac{m}{2e}} U^{-\frac12}
@@ -73,7 +103,6 @@
 \begin{align} \label{Langmuir-ur6}
 	\frac{d^2U}{dx^2} = a^2 U^{-\frac12}, \qquad a^2 = \frac{j}{\mathcal{E}_0} \sqrt{\frac{m}{2e}}
 \end{align}
-
 Введём замену:
 \[ p = \frac{dU}{dx}, \qquad \frac{d^2U}{dx^2} = p \frac{dp}{dU} \]
 Тогда, учитывая, что $x = 0:U_k = 0, dU/dx = 0$, получаем:
@@ -190,11 +219,11 @@
 \begin{align} \label{eq:error:4.1}
 	\Delta \nu_\text{пр} = \pm (2 + \frac{30}{\nu_\text{уст}})\%
 \end{align}
-где $\nu_\text{уст}$ -- значение, установленное на шкале регулятора частоты. Распишем:
+где $\nu_\text{уст}$ --- значение, установленное на шкале регулятора частоты. Распишем:
 \begin{align} \label{eq:error:4.2}
 	\boxed{\Delta \nu_\text{пр} = \pm \left(\frac{2\,\nu_\text{уст} + 30}{100} k\right)}
 \end{align}
-где $k$ -- значение множителя на генераторе.
+где $k$ --- значение множителя на генераторе.
 
 \subsubsection{Вычисление косвенной погрешности коэффициента K}
 Выведем формулу косвенной погрешности крутизны из формулы \cref{eq:pr:1}:
