--- a/source/practice/6_dependence_of_gain_on_load_resistance.tex
+++ b/source/practice/6_dependence_of_gain_on_load_resistance.tex
@@ -2,7 +2,7 @@
 
 Для каждой из характеристик подсчитали коэффициент крутизны $S$ на линейном участке графика.
 
-\begin{table}{p}
+\begin{table}{H}
 	\centering
 	\caption{Зависимость $K$ от частоты $\nu$, при $R_a = 50~\text{кОм}$}
 	\label{tab:7}
@@ -13,7 +13,7 @@
 		\end{tabular}
 \end{table}
 
-\begin{table}[p]
+\begin{table}[H]
 	\centering
 	\caption{Зависимость $K$ от сопротивления нагрузки $R_a$ при частоте $\nu=1~\text{кГц}$}
 	\label{tab:7}
@@ -35,7 +35,7 @@
 		\end{tabular}
 \end{table}
 
-\begin{table}[p]
+\begin{table}[H]
 	\centering
 	\caption{Зависимость $K$ от частоты $\nu$ ($U_a = 100~\text{В}$)}
 	\label{tab:8}
@@ -91,3 +91,40 @@
 				\end{tabular}
 		\end{subtable}
 \end{table}
+
+Заметим, что при $R = 50~\text{кОм}$ (см \cref{tab:8b}) коэффициент $K$ падает в $2$ раза при частоте  между $\nu = 120~\text{кГц}$ и $\nu = 140~\text{кГц}$
+
+Построим график зависимости коэффициента усиления от сопротивления нагрузки $K(R_a)$ по \cref{tab:7}
+
+%%%
+\begin{figure}[H]
+	\centering
+	\label{fig:5}
+	\includegraphics[width=\linewidth]{graph/graph_5}
+	\caption{Зависимость коэффициента усиления $K$ от сопротивления $R_a$}
+\end{figure}
+%\includegraphics[width=\linewidth]{graph/graph_5}
+%%%
+
+Погрешности $U_\text{вых}$ мы находим из фотографий измерений с помощью осциллографа. Погрешность $R$ возьмём из документации к установке.
+
+Максимальный коэффициент усиления достигается при $R_a = 200~\text{кОм}$ и равен $18,6$, далее рост усиления прекращается и наблюдается спад усиления. Это соответствует тому, что при увеличении $R_a$ рабочая точка на динамической анодно-сеточной характеристике смещается ближе к основанию, где $R_i$ возрастает, а  уменьшается
+
+Из формулы \cref{eq:link:8} следует, что динамический коэффициент не может превзойти статический. Практически динамический коэффициент оказался меньше статического примерно в два раза.
+
+Построим графики зависимости $K$ от частоты сигнала $\nu$ по \cref{tab:8a} и \cref{tab:8b}.
+
+Из графиков видно, что падение коэффициента усиления, по мере увеличения частоты сигнала, происходит быстрее при более высоком сопротивлении.
+
+ \begin{figure}[H]
+ 	\centering
+ 	\label{fig:6}
+ 	\includegraphics[width=\linewidth]{graph/graph_6}
+ 	\caption{Зависимость коэффициента усиления от частоты входного сигнала при $R=50~\text{кОм}$}
+ \end{figure}
+ \begin{figure}[H]
+ 	\centering
+ 	\label{fig:7}
+ 	\includegraphics[width=\linewidth]{graph/graph_7}
+ 	\caption{Зависимость коэффициента усиления от частоты входного сигнала при $R=1~\text{кОм}$}
+ \end{figure}
