"Установка с диодом и триодом"
Тк мы не получаем к ним доступ напрямую

--- a/source/introduction.tex
+++ b/source/introduction.tex
@@ -31,5 +31,5 @@
 	\item Генератор низкочастотных сигналов \texttt{ГЗ-112};
 	\item Провода;
 	\item Осциллограф цифровой \texttt{GDS-71022};
-	\item Диод и триод.
+	\item Установка с диодом и триодом.
 \end{enumerate}
